Fix title radio buttons alignment

--- a/public/css/tmsm-woocommerce-vouchers-public.css
+++ b/public/css/tmsm-woocommerce-vouchers-public.css
@@ -36,17 +36,25 @@ table.vouchers-fields .value{
 }
 
 .woocommerce form .vouchers-fields .title-field input, .woocommerce form .vouchers-fields .title-field label {
-  display: inline-block;
+  display: block;
 }
+
+
 
 @media (max-width: 500px){
   .vouchers-fields .title-field .input-radio  {
     float: left;
     margin-right: 10px;
-    margin-top: 10px;
+    margin-top: 6px;
   }
   .vouchers-fields .title-field label.radio{
     display: block;
+    margin: 0;
+  }
+}
+@media (min-width: 501px) {
+  .woocommerce form .vouchers-fields .title-field input, .woocommerce form .vouchers-fields .title-field .woocommerce-input-wrapper label {
+    display: inline-block;
   }
 }
 
